--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,13 +5,17 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="10" />
-
+	<uses-permission android:name = "android.permission.INTERNET" />
+	<uses-permission android:name = "android.permission.ACCESS_FINE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
-            android:name=".JLSTutorialActivity" >
+            android:name="edu.ncue.im.MainMapActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,8 +25,5 @@
         <uses-library android:name ="com.google.android.maps" />
     </application>
     
-	<uses-permission android:name = "android.permission.INTERNET" />
-	<uses-permission android:name = "android.permission.ACCESS_FINE_LOCATION"/>
-	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
 </manifest>
