--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,8 +14,9 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar"
+        android:theme="@android:style/Theme.Holo"
          >
+        <uses-library android:name ="com.google.android.maps" />
         <activity
             android:label="@string/app_name"
             android:name="edu.ncue.im.MainMapActivity" >
@@ -25,7 +26,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <uses-library android:name ="com.google.android.maps" />
+        
+        
         <activity android:name="edu.ncue.im.BrowseContentActivity"></activity>
         <activity android:name="edu.ncue.im.ContentDetailActivity"></activity>
     </application>
