--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo"
+        android:theme="@android:style/Theme.DeviceDefault"
          >
         <uses-library android:name ="com.google.android.maps" />
         <activity
