implement imageView in DetailActivity Add navigation up function At Action bar
** this version wont work under level 11 **

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,7 +32,7 @@
         
         <activity android:name="edu.ncue.im.BrowseContentActivity"></activity>
         <activity android:name="edu.ncue.im.ContentDetailActivity"></activity>
-        <activity android:name="edu.ncue.im.SocialLoginActivity"></activity>
+        <activity android:name="edu.ncue.im.SettingsActivity"></activity>
     </application>
     
 
