--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,12 +9,12 @@
 	<uses-permission android:name = "android.permission.ACCESS_FINE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-	
+	<uses-permission android:name = "android.permission.NFC" />
 	
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.DeviceDefault"
+        android:theme="@android:style/Theme.Holo"
          >
         <uses-library android:required="true" 
   		android:name="com.google.android.maps">
