--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,21 +4,23 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="10" />
+    <uses-sdk android:minSdkVersion="11" />
 	<uses-permission android:name = "android.permission.INTERNET" />
 	<uses-permission android:name = "android.permission.ACCESS_FINE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name = "android.permission.NFC" />
-	
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo"
          >
+         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_fb_id"/>
         <uses-library android:required="true" 
   		android:name="com.google.android.maps">
 		</uses-library> 
+		<activity android:name="com.facebook.LoginActivity"
+          android:label="@string/app_name" />
         <activity
             android:label="@string/app_name"
             android:name="edu.ncue.im.MainMapActivity" >
@@ -33,6 +35,7 @@
         <activity android:name="edu.ncue.im.BrowseContentActivity"></activity>
         <activity android:name="edu.ncue.im.ContentDetailActivity"></activity>
         <activity android:name="edu.ncue.im.SettingsActivity"></activity>
+        <activity android:name="edu.ncue.im.FBSettingActivity"></activity>
     </application>
     
 
