--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name="edu.ncue.im.SettingsActivity"></activity>
         <activity android:name="edu.ncue.im.FBSettingActivity"></activity>
         <activity android:name="edu.ncue.im.NfcPushInActivity"></activity>
+        <activity android:name="edu.ncue.im.NfcPassportActivity"></activity>
     </application>
     
 
