--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,7 @@
           android:label="@string/app_name" />
         <activity
             android:label="@string/app_name"
-            android:name="edu.ncue.im.MainMapActivity" >
+            android:name="edu.ncue.im.MainMapActivity" android:screenOrientation="portrait">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,8 +36,8 @@
         <activity android:name="edu.ncue.im.ContentDetailActivity"></activity>
         <activity android:name="edu.ncue.im.SettingsActivity"></activity>
         <activity android:name="edu.ncue.im.FBSettingActivity"></activity>
-        <activity android:name="edu.ncue.im.NfcPushInActivity"></activity>
-        <activity android:name="edu.ncue.im.NfcPassportActivity"></activity>
+        <activity android:name="edu.ncue.im.NfcPushInActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="edu.ncue.im.NfcPassportActivity" android:screenOrientation="portrait"></activity>
     </application>
     
 
