--- a/project.properties
+++ b/project.properties
@@ -9,4 +9,5 @@
 
 # Project target.
 target=Google Inc.:Google APIs:16
-android.library.reference.1=../../Code/FacebookSDK
+android.library=false
+android.library.reference.1=D:/Documents/Workspace/FacebookSDK
